# ModemManager

./: .gitignore  Makefile.am  configure.ac
cli/: Makefile.am  mmcli-bearer.c  mmcli-common.c  mmcli-common.h  mmcli-modem-3gpp.c  mmcli-modem-location.c  mmcli-modem.c  mmcli-output.c  mmcli-output.h  mmcli.c  mmcli.h
data/: org.freedesktop.ModemManager1.conf.polkit
docs/reference/api/: ModemManager-sections.txt
docs/reference/libmm-glib/: libmm-glib-sections.txt
include/: Makefile.am  ModemManager-enums-3gpp-ussd.h  ModemManager-enums-firmware.h  ModemManager-enums-location.h  ModemManager-enums-messaging.h  ModemManager-enums-oma.h  ModemManager-enums-voice.h  ModemManager-enums.h  ModemManager-version.h.in  ModemManager.h
introspection/: Makefile.am  org.freedesktop.ModemManager1.Modem.Location.xml  org.freedesktop.ModemManager1.Modem.Modem3gpp.xml  org.freedesktop.ModemManager1.Modem.xml
libmm-glib/: Makefile.am  libmm-glib.h  mm-call-audio-format.c  mm-call.c  mm-common-helpers.c  mm-common-helpers.h  mm-helper-types.h  mm-manager.c  mm-manager.h  mm-modem-3gpp.c  mm-modem-3gpp.h  mm-modem-firmware.h  mm-object.c  mm-object.h
libqcdm/src/: commands.c  commands.h
libqcdm/tests/: ipv6pref.c  modepref.c  reset.c  test-qcdm-com.c
plugins/: Makefile.am
plugins/altair/: mm-broadband-modem-altair-lte.c
plugins/anydata/: mm-broadband-modem-anydata.c
plugins/cinterion/: mm-broadband-modem-cinterion.c  mm-broadband-modem-qmi-cinterion.c  mm-common-cinterion.c  mm-common-cinterion.h
plugins/dell/: 77-mm-dell-port-types.rules  mm-broadband-modem-dell-dw5821e.c  mm-dell-dw5821e-carrier-mapping.conf
plugins/huawei/: mm-broadband-modem-huawei.c  mm-call-huawei.c  mm-call-huawei.h  mm-modem-helpers-huawei.c  mm-modem-helpers-huawei.h  mm-sim-huawei.c  mm-sim-huawei.h
plugins/huawei/tests/: test-modem-helpers-huawei.c
plugins/icera/: mm-broadband-modem-icera.c
plugins/iridium/: mm-broadband-modem-iridium.c  mm-sim-iridium.c  mm-sim-iridium.h
plugins/mbm/: mm-broadband-modem-mbm.c  mm-sim-mbm.c  mm-sim-mbm.h
plugins/mtk/: mm-broadband-modem-mtk.c
plugins/nokia/: mm-broadband-modem-nokia.c  mm-sim-nokia.c  mm-sim-nokia.h
plugins/novatel/: mm-broadband-modem-novatel-lte.c  mm-broadband-modem-novatel.c  mm-sim-novatel-lte.c  mm-sim-novatel-lte.h
plugins/option/: mm-broadband-modem-hso.c  mm-broadband-modem-option.c
plugins/pantech/: mm-broadband-modem-pantech.c  mm-sim-pantech.c  mm-sim-pantech.h
plugins/samsung/: mm-broadband-modem-samsung.c
plugins/sierra/: mm-broadband-modem-sierra-icera.c  mm-broadband-modem-sierra.c  mm-common-sierra.c  mm-common-sierra.h  mm-sim-sierra.c  mm-sim-sierra.h
plugins/simtech/: mm-broadband-modem-simtech.c
plugins/telit/: mm-plugin-telit.c
plugins/thuraya/: mm-broadband-modem-thuraya.c  mm-modem-helpers-thuraya.c  mm-modem-helpers-thuraya.h
plugins/thuraya/tests/: test-mm-modem-helpers-thuraya.c
plugins/via/: mm-broadband-modem-via.c
plugins/wavecom/: mm-broadband-modem-wavecom.c
plugins/xmm/tests/: test-modem-helpers-xmm.c
plugins/zte/: mm-broadband-modem-zte-icera.c  mm-broadband-modem-zte.c
src/: Makefile.am  mm-base-call.c  mm-base-call.h  mm-base-manager.c  mm-base-modem.c  mm-base-modem.h  mm-base-sim.c  mm-base-sim.h  mm-broadband-bearer.c  mm-broadband-modem-mbim.c  mm-broadband-modem-qmi.c  mm-broadband-modem.c  mm-broadband-modem.h  mm-call-list.c  mm-call-list.h  mm-hdlc.c  mm-hdlc.h  mm-iface-modem-3gpp.c  mm-iface-modem-3gpp.h  mm-iface-modem-firmware.c  mm-iface-modem-location.c  mm-iface-modem-location.h  mm-iface-modem-voice.c  mm-iface-modem.c  mm-iface-modem.h  mm-modem-helpers-mbim.c  mm-modem-helpers-mbim.h  mm-modem-helpers-qmi.c  mm-modem-helpers-qmi.h  mm-modem-helpers.c  mm-modem-helpers.h  mm-port-probe.c  mm-port-serial-at.c  mm-port-serial-gps.c  mm-port-serial-qcdm.c  mm-port-serial.c  mm-port-serial.h  mm-shared-qmi.c  mm-shared-qmi.h
src/helpers/: Makefile.am
src/iface-3gpp/: Makefile.am
src/iface-cdma/: Makefile.am
src/iface-firmware/: Makefile.am
src/iface-location/: Makefile.am
src/iface-messaging/: Makefile.am  mm-base-sms.c  mm-base-sms.h  mm-sms-list.h
src/iface-modem/: Makefile.am
src/iface-oma/: Makefile.am
src/iface-signal/: Makefile.am
src/iface-simple/: Makefile.am
src/iface-time/: Makefile.am
src/iface-voice/: Makefile.am  mm-base-call.c  mm-call-list.c
src/port/: Makefile.am
src/ppp/: mm-lcp.c  mm-lcp.h  mm-ppp.c  mm-ppp.h
src/protocol-at/: Makefile.am  mm-broadband-modem.c  mm-sim.c  mm-sim.h  mm-sms.c  mm-sms.h
src/protocol-mbim/: Makefile.am  mm-broadband-modem-mbim.c  mm-sms-mbim.c
src/protocol-qmi/: Makefile.am  mm-broadband-modem-qmi.c  mm-sms-qmi.c
src/tests/: Makefile.am  test-hdlc.c  test-modem-helpers.c  test-ppp.c
test/: Makefile.am
